# AegisLegacy

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  aegis.ps1  aegis.sh
.claude/: CLAUDE.md
.claude/hooks/: README.md
.claude/rules/: README.md
.claude/skills/: README.md
.github/workflows/: README.md
agent-perl/: README.md  cpanfile
agent-perl/lib/Aegis/: Collector.pm  Reporter.pm  Scanner.pm  Utils.pm
agent-perl/t/: 00-load.t  collector.t  reporter.t  scanner.t  utils.t
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py  schemas.py
backend/app/api/routes/: rules.py  scans.py
backend/app/core/: __init__.py  config.py
backend/app/domain/: __init__.py  findings.py  language.py  severity.py
backend/app/observability/: __init__.py  logging.py
backend/app/reports/: __init__.py
backend/app/repositories/: __init__.py  database.py  models.py  scan_repository.py
backend/app/rules/: __init__.py  engine.py  loader.py  paths.py  schema.py
backend/app/scanners/: __init__.py
backend/app/security/: __init__.py  api_key.py
backend/app/services/: __init__.py  scan_runner.py  scan_service.py  scoring.py
backend/app/workers/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_rules_route.py  test_scans_route.py
backend/tests/core/: test_config.py
backend/tests/observability/: test_logging.py
backend/tests/repositories/: conftest.py  test_scan_repository.py
backend/tests/rules/: test_engine.py  test_loader.py  test_schema.py
backend/tests/security/: test_api_key.py
backend/tests/services/: test_scan_service.py  test_scoring.py
cli/: README.md  pyproject.toml
cli/aegislegacy/: __init__.py  main.py
cli/aegislegacy/commands/: __init__.py  doctor.py  rules.py  scan.py
cli/aegislegacy/config/: __init__.py  settings.py
cli/aegislegacy/output/: __init__.py  tables.py
cli/tests/: conftest.py  test_main.py  test_settings.py
cli/tests/commands/: test_doctor.py  test_rules.py  test_scan.py
dashboard/: README.md
demo-legacy-app/: .env  README.md
demo-legacy-app/config/: app.conf
demo-legacy-app/perl-cgi/: plugin_loader.pl  upload.cgi
demo-legacy-app/python-scripts/: backup.py  legacy_loader.py
docs/: README.md  demo-script.md  interview-pitch.md
reports/samples/: README.md
rules/modernization/: README.md
rules/perl/: command-injection.yaml  eval.yaml  legacy-open.yaml
rules/python/: eval-exec.yaml  insecure-deserialization.yaml  subprocess-shell.yaml
rules/secrets/: cloud-keys.yaml  hardcoded-secrets.yaml
