[project]
name = "aegislegacy-cli"
version = "0.1.0"
description = "AegisLegacy CLI: scan and score legacy Perl/Python codebases from the terminal."
requires-python = ">=3.12"
# Also depends at runtime on the `app` package from ../backend (rules engine,
# domain, scoring). It is not listed as a PyPI dependency because this is a
# monorepo path dependency: install both packages editable in the same
# environment (see Makefile install-dev) rather than publishing `app`
# separately. Tests fall back to a sys.path shim (see tests/conftest.py) so
# they run even without installing.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.scripts]
aegis = "aegislegacy.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Typer's documented API requires calling typer.Argument()/typer.Option()
# in parameter defaults so it can introspect them; this is not the
# mutable-default-argument footgun the rule targets.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
mypy_path = "../backend"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aegislegacy*"]
