[project]
name = "aegislegacy-cli"
version = "0.1.0"
description = "AegisLegacy CLI: scan and score legacy Perl/Python codebases from the terminal."
requires-python = ">=3.12"
# Dépend aussi du package `app` dans ../backend. Installez les deux packages en mode editable.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
]

[project.scripts]
aegis = "aegislegacy.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
mypy_path = "../backend"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aegislegacy*"]
